@@ -27,7 +27,6 @@
 #define GNOME_CONFIG_H
 
 #include <glib.h>
-#include <libgnomebase/gnome-defs.h>
 
 G_BEGIN_DECLS
 
