@@ -33,7 +33,6 @@
 #include <glib.h>
 #include <dirent.h>
 
-#include <libgnomebase/gnome-defs.h>
 #include "gnome-fileconvert.h"
 #include "gnome-util.h"
 #include "libgnomeP.h"
